# dspy-activation-clamping

./: .gitignore  FINDINGS.md  README.md  RESULTS_RIGOROUS.md  experiment.py  experiment_binary.py  experiment_comprehensive.py  experiment_direct.py  experiment_final.py  experiment_rigorous.py  nnsight_lm.py  pyproject.toml  rigorous_protocol.py  steering.py
tests/: test_rigorous_protocol.py  test_steering.py
