[project]
name = "dspy-activation-clamping"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=4.8.4",
    "dspy>=3.1.3",
    "nnsight>=0.6.3",
    "torch>=2.11.0",
    "transformers>=5.4.0",
]
